version/0.30/_sources/api/solver/_autosummary/settings/icing_3_child.rst.txt
:orphan:

.. _icing_3_child:

icing_child
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.icing_3_child
    :show-inheritance:

.. rubric:: Attributes

============================================   ==============================================================================

Attribute                                                                                                             Summary

============================================   ==============================================================================
:ref:`name <name_2>`                                                                                      Name of the object.

:ref:`report_type <report_type>`                   The report type; the list may vary on the selected report definition type.

:ref:`output_parameter <output_parameter_1>`               Option to make report definition available as an output parameter.

============================================   ==============================================================================

.. rubric:: Methods

========================================================   ======================================================================

Method                                                                                                                    Summary

========================================================   ======================================================================
:ref:`create_output_parameter <create_output_parameter>`       Option to make report definition available as an output parameter.

========================================================   ======================================================================

.. rubric:: Included in:

========================   =======================================================

Parent                                                                     Summary

========================   =======================================================
:ref:`icing_3 <icing_3>`       Create a new or edit an existing report definition.

========================   =======================================================

